--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "babel-preset-react": "^6.16.0",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
+    "eslint": "^3.8.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.1",
     "node-sass": "^3.10.1",
     "react": "^15.3.2",
@@ -29,5 +31,9 @@
     "webpack": "^1.13.2",
     "webpack-clean-plugin": "^0.2.3",
     "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0"
   }
 }
